@@ -204,6 +204,11 @@
 
       \item \code{unzip()} can list archives with comments and with
       spaces in file names even using external \command{unzip} command.
+
+      \item Command line completion has a new setting
+      \code{rc.settings(dots = FALSE}} to remove \code{...} from the
+      list of possible function arguments.
+
     }
   }
 
